--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@ monitor_speed = 115200
 
 lib_deps = 
     blynkkk/Blynk
-    esphome/ESPAsyncWebServer-esphome
-    esphome/AsyncTCP-esphome
+    bblanchon/ArduinoJson
+    khoih-prog/AsyncWebServer_ESP32_W6100
 
     https://github.com/themdeee/WebSerialPro.git
-    https://github.com/themdeee/ddns_esp32.git
+    https://github.com/themdeee/esp-ddns.git
