Support for Informer hardware v2.0 from now on

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,15 +1,18 @@
-[env:esp32dev]
+[env:esp32-s3-devkitc-1]
 platform = espressif32
-board = esp32dev
+board = esp32-s3-devkitc-1
 framework = arduino
 
 upload_speed = 921600
 monitor_speed = 115200
 
+build_flags = 
+	-D ARDUINO_USB_CDC_ON_BOOT
+
 lib_deps = 
     blynkkk/Blynk
     bblanchon/ArduinoJson
-    khoih-prog/AsyncWebServer_ESP32_W6100
+    khoih-prog/AsyncWebServer_ESP32_SC_W6100
 
     https://github.com/themdeee/WebSerialPro.git
     https://github.com/themdeee/esp-ddns.git
