--- a/platformio.ini
+++ b/platformio.ini
@@ -6,8 +6,13 @@ framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 
+board_upload.flash_size = 16MB
+board_build.arduino.partitions = default_16MB.csv
+board_build.arduino.memory_type = qio_opi
+
 build_flags = 
-	-D ARDUINO_USB_CDC_ON_BOOT
+    -D ARDUINO_USB_CDC_ON_BOOT
+    -D BOARD_HAS_PSRAM
 
 lib_deps = 
     blynkkk/Blynk
