--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@ board_build.arduino.partitions = default_16MB.csv
 board_build.arduino.memory_type = qio_opi
 
 build_flags = 
-    -D ARDUINO_USB_CDC_ON_BOOT
+    ; -D ARDUINO_USB_CDC_ON_BOOT
     -D BOARD_HAS_PSRAM
 
 lib_deps = 
