Support for WebSerial V2

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ build_flags =
 lib_deps = 
     blynkkk/Blynk
     bblanchon/ArduinoJson
-    khoih-prog/AsyncWebServer_ESP32_SC_W6100
+    ; khoih-prog/AsyncWebServer_ESP32_SC_W6100
 
-    https://github.com/themdeee/WSP.git#Informer
+    https://github.com/themdeee/WSP.git
     https://github.com/themdeee/esp-ddns.git
