--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
     blynkkk/Blynk
     bblanchon/ArduinoJson
     ; khoih-prog/AsyncWebServer_ESP32_SC_W6100
+    a7md0/WakeOnLan
 
     https://github.com/themdeee/WSP.git
     https://github.com/themdeee/esp-ddns.git
