--- a/platformio.ini
+++ b/platformio.ini
@@ -3,6 +3,10 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 
+platform_packages = 
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+    framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs/archive/refs/heads/idf-release/v5.1.zip
+
 upload_speed = 921600
 monitor_speed = 115200
 
