--- a/platformio.ini
+++ b/platformio.ini
@@ -1,11 +1,7 @@
 [env:esp32-s3-devkitc-1]
-platform = espressif32
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 board = esp32-s3-devkitc-1
 framework = arduino
-
-platform_packages = 
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
-    framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs/archive/refs/heads/idf-release/v5.1.zip
 
 upload_speed = 921600
 monitor_speed = 115200
